# rag-pipeline

./: .dockerignore  .env.example  .env.render.example  .env.test  .gitignore  .pre-commit-config.yaml  CODEOWNERS  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  Dockerfile  FRONTEND_SETUP.md  LOCAL_SETUP.md  MIGRATION.md  Makefile  POETRY_SETUP.md  QUICK_START.md  README.md  debug-ci.py  docker-compose.yml  ingest.py  mypy.ini  pre-commit-config.yaml  pyproject.toml  render.yaml  requirements.txt  ruff.toml  verify-uv-ci.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.ipynb_checkpoints/: README-checkpoint.md
api/: main.py
benchmarks/locust/: generate_evidence.py  locust.conf  locustfile.py  queries.txt  run_test.py
configs/: app.yaml  prometheus.yml
data/: .gitkeep
data/eval/: eval_dataset.json
data/seed/: rag_systems.md  sample_doc1.txt  sample_doc2.md  vector_databases.txt
deployments/k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  pvc.yaml  service.yaml
deployments/k8s/blue-green/: blue-deployment.yaml  green-deployment.yaml  switch-script.sh
deployments/k8s/overlays/production/: deployment-patch.yaml  kustomization.yaml
deployments/k8s/overlays/staging/: deployment-patch.yaml  kustomization.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  POETRY_TROUBLESHOOTING.md  RENDER_DEPLOYMENT.md  TROUBLESHOOTING.md
frontend/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  requirements.txt  tailwind.config.ts  vercel.json
frontend/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/app/diagnostics/: page.tsx
frontend/components/: ABTestPanel.tsx  ComparisonPanel.tsx  Diagnostics.tsx  GuidedDemo.tsx  Hero.tsx  HybridSearchBreakdown.tsx  MetricsPanel.tsx  PerformanceGraphs.tsx  QueryHistory.tsx  QueryInterface.tsx  RAGASScores.tsx  ResultsDisplay.tsx  SourceCitations.tsx  SystemStatus.tsx  index.ts
frontend/components/ab/: ABDeck.tsx
frontend/components/metrics/: MetricKPI.tsx  MetricPanel.tsx  ROIInline.tsx  Sparkline.tsx
frontend/components/shared/: LiveStatusDot.tsx
frontend/components/ui/: accordion.tsx  badge.tsx  button.tsx  progress.tsx
frontend/contexts/: MetricsContext.tsx
frontend/lib/: api.ts  date-utils.ts  ragas-utils.ts  utils.ts
frontend/types/: index.ts
monitoring/grafana/provisioning/dashboards/: rag_api_dashboard.json
monitoring/prometheus/: prometheus.yml
scripts/: ONE-LINER-FIX.sh  autofix.sh  ci-bulletproof.sh  ci-local-test.sh  ci.sh  diagnose-ci.sh  fix-ci-forever.sh  fix-ci-immediately.sh  fix-ci-pipeline.sh  fix-hooks.sh  fix-vector-store.sh  generate-lock.sh  init_deployed_store.py  init_project.sh  initialize_vector_store.py  install-hooks.sh  nuclear-ci-fix.sh  simple_ingest.py  summarize_evidence.py  test-docker-build.sh  test_deployment.py  test_full_pipeline.py  test_hybrid_retriever.py  test_local.py  validate_ci.sh  verify-ci.sh
src/: __init__.py
src/api/: main.py  middleware.py
src/api/routers/: admin.py  experiments.py  feedback.py  health.py  metrics.py  query.py  query_hybrid.py
src/core/: config.py  models.py
src/eval/: ragas_runner.py
src/evaluation/: ragas_evaluator.py
src/experiments/: ab_testing.py
src/infrastructure/: cache.py  database.py  logging.py
src/providers/: __init__.py  base.py  factory.py  openai.py
src/rag/: generator.py  ingest.py  pipeline.py  retriever.py
src/retrieval/: chunking.py  embeddings.py  hybrid_search.py  rag_pipeline.py  reranker.py  vector_store.py
tests/: conftest.py  test_api_basic.py  test_chromadb_integration.py  test_pipeline.py  test_rrf.py
tests/contract/: __init__.py  test_api_contract.py
tests/integration/: test_full_pipeline.py
